--- a/app.json
+++ b/app.json
@@ -27,96 +27,96 @@
         },
         "BOT_TOKEN2": {
             "description": "Bot token, get it from @BotFather.",
-            "value": ""
+            "value": "false"
 
         },
         "BOT_TOKEN3": {
             "description": "Bot token, get it from @BotFather.",
-            "value": ""
+            "value": "false"
            
         },
         "BOT_TOKEN4": {
             "description": "Bot token, get it from @BotFather.",
-            "value": ""
+            "value": "false"
             
         },
         "BOT_TOKEN5": {
             "description": "Bot token, get it from @BotFather.",
-            "value": ""
+            "value": "false"
            
         },
         "BOT_TOKEN6": {
             "description": "Bot token, get it from @BotFather.",
-            "value": ""
+            "value": "false"
             
         },
         "BOT_TOKEN7": {
             "description": "Bot token, get it from @BotFather.",
-            "value": ""
+            "value": "false"
             
         },
         "BOT_TOKEN8": {
             "description": "Bot token, get it from @BotFather.",
-            "value": ""
+            "value": "false"
             
         },
         "BOT_TOKEN9": {
             "description": "Bot token, get it from @BotFather.",
-            "value": ""
+            "value": "false"
             
         },
         "BOT_TOKEN10": {
             "description": "Bot token, get it from @BotFather.",
-            "value": ""
+            "value": "false"
             
         },
         "BOT_TOKEN11": {
             "description": "Bot token, get it from @BotFather.",
-            "value": ""
+            "value": "false"
         },
         "BOT_TOKEN12": {
             "description": "Bot token, get it from @BotFather.",
-            "value": ""
+            "value": "false"
 
         },
         "BOT_TOKEN13": {
             "description": "Bot token, get it from @BotFather.",
-            "value": ""
+            "value": "false"
            
         },
         "BOT_TOKEN14": {
             "description": "Bot token, get it from @BotFather.",
-            "value": ""
+            "value": "false"
             
         },
         "BOT_TOKEN15": {
             "description": "Bot token, get it from @BotFather.",
-            "value": ""
+            "value": "false"
            
         },
         "BOT_TOKEN16": {
             "description": "Bot token, get it from @BotFather.",
-            "value": ""
+            "value": "false"
             
         },
         "BOT_TOKEN17": {
             "description": "Bot token, get it from @BotFather.",
-            "value": ""
+            "value": "false"
             
         },
         "BOT_TOKEN18": {
             "description": "Bot token, get it from @BotFather.",
-            "value": ""
+            "value": "false"
             
         },
         "BOT_TOKEN19": {
             "description": "Bot token, get it from @BotFather.",
-            "value": ""
+            "value": "false"
             
         },
         "BOT_TOKEN20": {
             "description": "Bot token, get it from @BotFather.",
-            "value": ""
+            "value": "false"
             
         },
         "SUDO_USERS": {
