--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-    "name": " TOXIC Spam Bot",
+    "name": "Toxic Bot 2.0",
     "description": "Best Spamming Bots",
-    "logo": "https://telegra.ph/file/dab32b1a3f960eb5ba5c6.jpg",
+    "logo": "https://telegra.ph/file/8626f33867fc155eaa404.jp",
     "keywords": [
         "telegram",
         "telethon",
@@ -10,131 +10,75 @@
         "SpamBots"
     ],
     "repository": "https://github.com/Toxictelegram/BITTOKEN",
-    "website": "https://t.me/TheMikasa",
-    "success_url": "https://t.me/TheMikasa",
+    "website": "https://github.com/Toxictelegram/BITTOKEN",
+    "success_url": "https://github.com/Toxictelegram/BITTOKEN",
     "env": {
-        "API_HASH": {
-            "description": "You API HASH from my.telegram.org",
-            "value": ""
-        },
-        "APP_ID": {
-            "description": "You API ID from my.telegram.org",
-            "value": ""
-        },
-        "BOT_TOKEN": {
-            "description": "Bot token, get it from @BotFather.",
-            "value": ""
-        },
-        "BOT_TOKEN2": {
-            "description": "Bot token, get it from @BotFather.",
-            "value": "false"
-
-        },
-        "BOT_TOKEN3": {
-            "description": "Bot token, get it from @BotFather.",
-            "value": "false"
-           
-        },
-        "BOT_TOKEN4": {
-            "description": "Bot token, get it from @BotFather.",
-            "value": "false"
-            
-        },
-        "BOT_TOKEN5": {
-            "description": "Bot token, get it from @BotFather.",
-            "value": "false"
-           
-        },
-        "BOT_TOKEN6": {
-            "description": "Bot token, get it from @BotFather.",
-            "value": "false"
-            
-        },
-        "BOT_TOKEN7": {
-            "description": "Bot token, get it from @BotFather.",
-            "value": "false"
-            
-        },
-        "BOT_TOKEN8": {
-            "description": "Bot token, get it from @BotFather.",
-            "value": "false"
-            
-        },
-        "BOT_TOKEN9": {
-            "description": "Bot token, get it from @BotFather.",
-            "value": "false"
-            
-        },
-        "BOT_TOKEN10": {
-            "description": "Bot token, get it from @BotFather.",
-            "value": "false"
-            
-        },
-        "BOT_TOKEN11": {
-            "description": "Bot token, get it from @BotFather.",
-            "value": "false"
-        },
-        "BOT_TOKEN12": {
-            "description": "Bot token, get it from @BotFather.",
-            "value": "false"
-
-        },
-        "BOT_TOKEN13": {
-            "description": "Bot token, get it from @BotFather.",
-            "value": "false"
-           
-        },
-        "BOT_TOKEN14": {
-            "description": "Bot token, get it from @BotFather.",
-            "value": "false"
-            
-        },
-        "BOT_TOKEN15": {
-            "description": "Bot token, get it from @BotFather.",
-            "value": "false"
-           
-        },
-        "BOT_TOKEN16": {
-            "description": "Bot token, get it from @BotFather.",
-            "value": "false"
-            
-        },
-        "BOT_TOKEN17": {
-            "description": "Bot token, get it from @BotFather.",
-            "value": "false"
-            
-        },
-        "BOT_TOKEN18": {
-            "description": "Bot token, get it from @BotFather.",
-            "value": "false"
-            
-        },
-        "BOT_TOKEN19": {
-            "description": "Bot token, get it from @BotFather.",
-            "value": "false"
-            
-        },
-        "BOT_TOKEN20": {
-            "description": "Bot token, get it from @BotFather.",
-            "value": "false"
-            
-        },
-        "SUDO_USERS": {
-            "description": "Owner Id",
-            "value": ""
-            
-        },
-        "HEROKU_API_KEY": {
-            "description": "Your Heroku api key to update your bot",
-            "value": ""
-            
-        },
-        "HEROKU_APP_NAME": {
-            "description": "Your app name to Update your bot",
-            "value": ""
-            
-        }
-    },
+      "BOT_TOKEN": {
+        "description": "Bot token, get it from @BotFather",
+        "value": "",
+        "required": true
+      },
+      "APP_ID": {
+        "description": "Bot token, get it from @BotFather",
+        "value": "",
+        "required": true
+      },
+      "BOT_TOKEN2": {
+        "description": "Bot token, get it from @BotFather",
+        "value": "",
+        "required": false
+      },
+      "BOT_TOKEN3": {
+        "description": "Bot token, get it from @BotFather",
+        "value": "",
+        "required": false
+      },
+      "BOT_TOKEN4": {
+        "description": "Bot token, get it from @BotFather",
+        "value": "",
+        "required": false
+      },
+      "BOT_TOKEN5": {
+        "description": "Bot token, get it from @BotFather",
+        "value": "",
+        "required": false
+      },
+      "BOT_TOKEN6": {
+        "description": "Bot token, get it from @BotFather",
+        "value": "",
+        "required": false
+      },
+      "BOT_TOKEN7": {
+        "description": "Bot token, get it from @BotFather",
+        "value": "",
+        "required": false
+      },
+      "BOT_TOKEN8": {
+        "description": "Bot token, get it from @BotFather",
+        "value": "",
+        "required": false
+      },
+      "BOT_TOKEN9": {
+        "description": "Bot token, get it from @BotFather",
+        "value": "",
+        "required": false
+      },
+      "BOT_TOKEN10": {
+        "description": "Bot token, get it from @BotFather",
+        "value": "",
+        "required": false
+      },
+      "API_HASH": {
+        "description": "Api Hash",
+        "value": "",
+        "required": true
+      },
+      "SUDO_USERS": {
+        "description": "sudo Users Id",
+        "value": "",
+        "required": true
+      }
+  },
     "buildpacks": [
         {
             "url": "heroku/python"
