--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
     "name": "Toxic Bot 2.0",
     "description": "Best Spamming Bots",
-    "logo": "https://telegra.ph/file/8626f33867fc155eaa404.jp",
+    "logo": "https://telegra.ph/file/dab32b1a3f960eb5ba5c6.jpg",
     "keywords": [
         "telegram",
         "telethon",
